--- a/car_trade_project/ui/src/main/resources/static/single_car.html
+++ b/car_trade_project/ui/src/main/resources/static/single_car.html
@@ -104,7 +104,7 @@
 				var arg = arr[i].split('=');
 				obj[arg[0]] = arg[1];
 			}
-			return obj["id"]
+			return obj["cid"]
 		}
 
 		$(document).ready(function() {
@@ -368,7 +368,7 @@
 							</div>
 							<div class="similar-info">
 								<div class="primary-button" id="add_into_cart_btn">
-									<a href="#">Add Into Cart <i class="fa fa-dollar"></i></a>
+									<a>Add Into Cart <i class="fa fa-dollar"></i></a>
 								</div>
 							</div>
 						</div>
