--- a/car_trade_project/ui/src/main/resources/static/buyer_user_center.html
+++ b/car_trade_project/ui/src/main/resources/static/buyer_user_center.html
@@ -247,8 +247,7 @@
 			<div class="recent-car-content">
 				<div class="column-box">
 					<div class="col-md-12">
-						<div class="car-details">
-							<h4>Zhang San</h4>
+						<div class="car-details" id="buyer_detail" v-model="detail">
 							<div class="container">
 								<div class="row">
 									<ul class="car-info col-md-5">
@@ -284,21 +283,21 @@
 									</ul>
 									<form class="car-info col-md-5">
 										<div class="form-group">
-											<b>Tel </b><input id="TEL" value="15000000000" readonly="readonly" style="border: none;"/>
+											<b>Tel </b><input id="TEL" value="detail.btel" readonly="readonly" style="border: none;"/>
 										</div>
 										<div class="form-group">
-											<b>VIP </b><input value="2016/2017" readonly="readonly" style="border: none;"/>
+											<b>VIP </b><input value="detail.bvip" readonly="readonly" style="border: none;"/>
 										</div>
 										<div class="form-group">
-											<b>Name </b><input id="input1" value="2016/2017"  style="border: none;"/>
+											<b>Name </b><input id="input1" value="detail.bname"  style="border: none;"/>
 											<button class="col-md-4 btn" onclick="update_info(1)" style="float:right;">Update</button>
 										</div>
 										<div class="form-group">
-											<b>Gender </b><input id="input2" value="2016/2017" readonly="readonly" style="border: none;"/>
+											<b>Gender </b><input id="input2" value="detail.bgender" readonly="readonly" style="border: none;"/>
 											<button class="col-md-4 btn" onclick="update_info(2)" style="float:right;">Update</button>
 										</div>
 										<div class="form-group">
-											<b>Address </b><input id="input3" value="2016/2017"  style="border: none;"/>
+											<b>Address </b><input id="input3" value="detail.baddress"  style="border: none;"/>
 											<button class="col-md-4 btn" onclick="update_info(3)" style="float:right;">Update</button>
 										</div>
 
@@ -311,7 +310,7 @@
 												let data = new FormData();
 												data.append("btel", document.getElementById("TEL").value)
 												data.append("bname", document.getElementById("input1").value)
-												// data.append("Gender", document.getElementById("input2").value)
+												data.append("Gender", document.getElementById("input2").value)
 												data.append("baddress", document.getElementById("input3").value)
 												axios
 													.post("/BuyerAPI/updateUserInfo", data, {
@@ -339,6 +338,37 @@
 								</div>
 							</div>
 						</div>
+						<script>
+							const buyer_detail_app = {
+								data() {
+									return {
+										detail: {}
+									}
+								},
+								mounted() {
+									axios
+											.get("/BuyerAPI/getUserInfo?token=" + $.cookie("Token"))
+											// .get("#")
+											.then(response => {
+													this.detail={btel: response.data.detail.btel,
+														bvip: response.data.detail.bvip,
+														bname: response.data.detail.bname,
+														bgender: response.data.detail.bgender,
+														baddress: response.data.detail.baddress,
+												}
+												// this.random_car_list.push({cid: "123", cname: "猫", cprice:100, cpic1:"assets/images/car_item_6.jpg", cwarranty: 2018, cspeed: 100, cacceleration:7.1, cfuel: "petrol"});
+												// this.random_car_list.push({cid: "124", cname: "虎", cprice:200, cpic1:"assets/images/car_item_6.jpg", cwarranty: 2019, cspeed: 110, cacceleration:7.2, cfuel: "petrol"});
+												// this.random_car_list.push({cid: "125", cname: "兔", cprice:300, cpic1:"assets/images/car_item_6.jpg", cwarranty: 2020, cspeed: 120, cacceleration:7.3, cfuel: "petrol"});
+												// this.random_car_list.push({cid: "126", cname: "虎", cprice:400, cpic1:"assets/images/car_item_6.jpg", cwarranty: 2021, cspeed: 130, cacceleration:7.4, cfuel: "petrol"});
+
+											})
+											.catch(function (error){
+												alert(error);
+											})
+								}
+							}
+							Vue.createApp(buyer_detail_app).mount("#buyer_detail")
+						</script>
 					</div>
 				</div>
 			</div>
