测试通过注册订单功能 修复了相关bug，增加默认头像部分

--- a/car_trade_project/ui/src/main/resources/static/buyer_user_center.html
+++ b/car_trade_project/ui/src/main/resources/static/buyer_user_center.html
@@ -270,7 +270,7 @@
 												};
 
 												axios
-														.post("http://116.63.170.243:8000/picupload/buyer",formData,config)
+														.post("http://localhost:8000/picupload/buyer",formData,config)
 														.then(function (response) {
 															console.log(response);
 															document.getElementById("tar_img").setAttribute("src",response['data']);
